--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.2.0
   pluto_grid: ^8.0.0
   shared_preferences: ^2.2.2
+  flutter_spinkit: ^5.2.1
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
