--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_spinkit: ^5.2.1
   transparent_image: ^2.0.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
