--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   transparent_image: ^2.0.1
   provider: ^6.1.2
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
