--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   transparent_image: ^2.0.1
   provider: ^6.1.2
   file_picker: ^8.0.3
+  insta_image_viewer: ^1.0.4
 
 dev_dependencies:
   flutter_test:
