--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.1.2
   image: ^4.2.0
   crop_your_image: ^1.1.0
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
